apps/matrix/overlays/nishir/patch-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: matrix
spec:
  template:
    spec:
      containers:
        - name: synapse
          readinessProbe:
            httpGet:
              port: https
              scheme: HTTPS
            initialDelaySeconds: 60
          livenessProbe:
            httpGet:
              port: https
              scheme: HTTPS
            initialDelaySeconds: 120
          startupProbe:
            httpGet:
              port: https
              scheme: HTTPS
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 60
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: node.kubernetes.io/instance-type
                    operator: In
                    values:
                      - rpi4-medium
              weight: 80
      volumes:
        - name: certs
          configMap:
            name: nishir-ca-certificates.crt
        - name: tls
          secret:
            secretName: matrix-tls
            items:
              - key: tls.crt
                path: tls.crt
              - key: tls.key
                path: tls.key
                mode: 0640
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: matrix-discord
spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: node.kubernetes.io/instance-type
                    operator: In
                    values:
                      - rpi4-medium
              weight: 80
      volumes:
        - name: certs
          configMap:
            name: nishir-ca-certificates.crt
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: matrix-googlechat
spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: node.kubernetes.io/instance-type
                    operator: In
                    values:
                      - rpi4-medium
              weight: 80
      volumes:
        - name: certs
          configMap:
            name: nishir-ca-certificates.crt
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: matrix-linkedin
spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: node.kubernetes.io/instance-type
                    operator: In
                    values:
                      - rpi4-medium
              weight: 80
      volumes:
        - name: certs
          configMap:
            name: nishir-ca-certificates.crt
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: matrix-meta
spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: node.kubernetes.io/instance-type
                    operator: In
                    values:
                      - rpi4-medium
              weight: 80
      volumes:
        - name: certs
          configMap:
            name: nishir-ca-certificates.crt
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: matrix-slack
spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: node.kubernetes.io/instance-type
                    operator: In
                    values:
                      - rpi4-medium
              weight: 80
      volumes:
        - name: certs
          configMap:
            name: nishir-ca-certificates.crt
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: matrix-signal
spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: node.kubernetes.io/instance-type
                    operator: In
                    values:
                      - rpi4-medium
              weight: 80
      volumes:
        - name: certs
          configMap:
            name: nishir-ca-certificates.crt
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: matrix-whatsapp
spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: node.kubernetes.io/instance-type
                    operator: In
                    values:
                      - rpi4-medium
              weight: 80
      volumes:
        - name: certs
          configMap:
            name: nishir-ca-certificates.crt
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matrix-manager
spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: node.kubernetes.io/instance-type
                    operator: In
                    values:
                      - rpi4-medium
              weight: 80
      volumes:
        - name: certs
          configMap:
            name: nishir-ca-certificates.crt
        - name: tls
          secret:
            secretName: matrix-manager-tls
            items:
              - key: tls.crt
                path: tls.crt
              - key: tls.key
                path: tls.key
                mode: 0640
