apps/matrix/overlays/nishir/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: matrix
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: matrix
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: matrix-discord
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: matrix-googlechat
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: matrix-linkedin
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: matrix-meta
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: matrix-proxy
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: matrix-signal
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: matrix-slack
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: matrix-twitter
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: matrix-whatsapp
      ports:
        - port: https
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: matrix-discord
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: matrix-discord
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: matrix
      ports:
        - port: http
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: matrix-googlechat
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: matrix-googlechat
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: matrix
      ports:
        - port: http
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: matrix-linkedin
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: matrix-linkedin
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: matrix
      ports:
        - port: http
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: matrix-meta
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: matrix-meta
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: matrix
      ports:
        - port: http
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: matrix-proxy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: matrix-proxy
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: matrix
      ports:
        - port: https
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: matrix-signal
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: matrix-signal
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: matrix
      ports:
        - port: http
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: matrix-slack
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: matrix-slack
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: matrix
      ports:
        - port: http
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: matrix-twitter
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: matrix-twitter
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: matrix
      ports:
        - port: http
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: matrix-whatsapp
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: matrix-whatsapp
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: matrix
      ports:
        - port: http
